--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1076,6 +1076,8 @@
     <string name="chat_quit_group_alert">是否退出群组？</string>
     <string name="shield_group_msg">你已屏蔽该群聊</string>
     <string name="super_edit_group_name">快速编辑群名称，开启群聊</string>
+    <string name="super_open_mute_hint">全部被禁言！</string>
+    <string name="super_open_mute_hint_text">您已被禁言</string>
     <string name="edit_group_name">编辑群名称</string>
     <string name="unshield_group_msg">解除屏蔽该群聊</string>
     <string name="chat_quit">退出</string>
@@ -1114,6 +1116,7 @@
     <string name="please_open_camera_and_mic_permisssion">如需使用此功能，请开启麦克风与相机权限！！！</string>
     <string name="min_short_video_time">不得小于%d秒</string>
     <string name="ts_chat_no_message_default_tip">暂无消息</string>
+    <string name="ts_chat_no_message_default_notice">暂无公告</string>
     <string name="ts_message_history_deleted_tip">您正在删除聊天记录，删除后不可恢复</string>
     <string name="remove">移除</string>
     <string name="ts_blacklist">黑名单</string>
