--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1059,10 +1059,13 @@
     <string name="chat_info_shielded_message">屏蔽消息</string>
     <string name="chat_info_shielded_message_alert">开启后将不再接受群的消息</string>
     <string name="chat_info_banned_post_alert">开启后只允许群主和管理员发言，进入“成员权限”可单个设置禁言</string>
+    <string name="chat_info_setting_banned_post">开启禁言</string>
+    <string name="chat_info_relieve_banned_post">解除禁言</string>
     <string name="chat_info_clear_message">清空聊天记录</string>
     <string name="chat_info_find_message">查找聊天记录</string>
     <string name="chat_info_set_admin">设置管理员</string>
     <string name="chat_info_jurisdiction">成员权限</string>
+    <string name="chat_setting_info_jurisdiction">设置成员权限</string>
     <string name="chat_info_upgrade">升级群</string>
     <string name="chat_view_all_members">查看全部成员</string>
     <string name="chat_group_manager">群管理</string>
