--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1165,4 +1165,6 @@
     <string name="go_top">置顶</string>
     <string name="cancel_top">取消置顶</string>
 
+    <string name="official_group">官方群聊</string>
+
 </resources>
