增加查找单聊和群聊的聊天记录

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1169,5 +1169,6 @@
     <string name="no_result_group">该群不存在</string>
 
     <string name="official_group">官方群聊</string>
+    <string name="search_chat_record">查找聊天记录</string>
 
 </resources>
