fix bug ：首页状态栏在5.0版本手机上展示异常 fix bug：首页资讯除推荐tab，其他tab栏展示异常

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1184,4 +1184,6 @@
     <string name="official_group">官方群聊</string>
     <string name="search_chat_record">查找聊天记录</string>
 
+    <string name="rank_market">排行</string>
+
 </resources>
