1、将原自媒圈的UI部分改版成为我们链圈财经现在的版本，主要是对app首页以及部分功能的调整和优化！对更改链圈财经后对第三方的申请！ 2、完善群组功能，包括群相册，群公告，群权限，群聊天记录，设置管理员，禁言以及置顶功能。 3、新增加入群组和邀约分享功能！ 4、招聘Android工程师！ 5、修改部分bug.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1115,6 +1115,7 @@
     <string name="chat_edit_group_all_member">转让群主</string>
     <string name="chat_edit_group_announcement">群公告</string>
     <string name="chat_release_group_announcement">发布公告</string>
+    <string name="chat_edit_group_notice">编辑公告</string>
     <string name="chat_edit_group_card">群名片</string>
     <string name="chat_edit_group_notice_title">标题(必填)，4-40个字</string>
     <string name="chat_edit_group_notice_content">正文(必填)，15-500个字</string>
