--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
     <string name="user_info">个人资料</string>
     <string name="change_head_icon">更换头像</string>
     <string name="user_name">用户名</string>
+    <string name="edit_user_name_hint">用户名不能含有特殊字符</string>
     <string name="edit_user_name">设置用户名</string>
     <string name="sex">性别</string>
     <string name="select_sex">选择性别</string>
