--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,13 +41,16 @@
     <string name="dig_ranking">点赞排行榜</string>
     <string name="gold">金币</string>
     <string name="mine_collect">收藏</string>
+    <string name="download_recommend">下载推荐</string>
     <string name="suggetion">意见反馈</string>
     <string name="question_answer">Q&amp;A</string>
     <string name="draft_box">草稿箱</string>
     <string name="certification">认证</string>
     <string name="my_certification">我的认证</string>
     <string name="setting">设置</string>
-    <string name="wallet">钱包</string>
+    <string name="wallet">我的钱包</string>
+    <string name="cash">我的现金</string>
+    <string name="team">我的团队</string>
     <string name="me_music">购买的音乐</string>
     <string name="follow">关注</string>
     <string name="friends">好友</string>
