--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -831,6 +831,8 @@
     <string name="you_must_bind_email_to_unbind_phone">你必须绑定邮箱才能解绑手机哦</string>
     <string name="you_must_bind_phone_to_unbind_email">你必须绑定手机才能解绑邮箱哦</string>
     <string name="you_must_bind_phone2">你必须绑定手机才能绑定三方哦</string>
+    <string name="you_must_bind_phone_hint">您尚未绑定手机号，请前往绑定手机页面进行绑定</string>
+    <string name="go_bind">去绑定</string>
     <string name="bind_success">账号绑定成功</string>
     <string name="unbind_success">账号解绑成功</string>
 
