--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">链圈财经</string>
+    <string name="app_name">前链财经</string>
     <!--© 2017 Chengdu ZhishiSoft Technology Co., Ltd. All rights reserved.-->
     <string name="copyright">深圳市九曲互动软件有限公司 \n Copytight @2018 版权所有 </string>
     <!-- 主页  -->
@@ -51,8 +51,12 @@
     <string name="wallet">我的钱包</string>
     <string name="cash">我的现金</string>
     <string name="team">我的团队</string>
+    <string name="earnings_details">收益明细</string>
+    <string name="select_currency_hint">请选择币种</string>
     <string name="earnings">收益</string>
     <string name="time">时间</string>
+    <string name="begin_time">开始时间</string>
+    <string name="end_time">结束时间</string>
     <string name="me_music">购买的音乐</string>
     <string name="follow">关注</string>
     <string name="friends">好友</string>
@@ -288,6 +292,7 @@
     <string name="quit_group">退出</string>
     <string name="group_joined">已加入</string>
     <string name="group_mine">我的圈子</string>
+    <string name="my_invite">我的邀请</string>
     <string name="group_count">%d个兴趣小组，等待你的加入！</string>
     <string name="circle">圈子</string>
     <string name="circle_post">帖子</string>
@@ -529,7 +534,7 @@
     <string name="ali_pay_text">支付宝支付</string>
     <string name="blance_pay_text">余额支付</string>
     <string name="immediately_pay_text">立即支付</string>
-    <string name="member_agreement_text">同意《链圈财经会员协议》</string>
+    <string name="member_agreement_text">同意《前链财经会员协议》</string>
     <string name="choose_recharge_style_formart">%s充值</string>
     <string name="choose_withdrawals_style_formart">%s提现</string>
 
@@ -875,7 +880,7 @@
     <string name="default_certify_format">认证：%s</string>
     <string name="default_location_format">地址：%s</string>
     <string name="default_certify">当前用户还没有认证呢</string>
-    <string name="invite_friend">邀请您的好友使用链圈吧！http://faceke.com/</string>
+    <string name="invite_friend">邀请您的好友使用前链吧！http://faceke.com/</string>
     <string name="reward_type_error">打赏类型错误</string>
     <!--评论的、赞的-->
     <string name="digg_format_feed">%s 赞了你的动态</string>
