--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,9 +48,12 @@
     <string name="certification">认证</string>
     <string name="my_certification">我的认证</string>
     <string name="setting">设置</string>
-    <string name="wallet">我的钱包</string>
-    <string name="cash">我的现金</string>
+    <string name="wallet">数字资产</string>
+    <string name="cash">我的钱包</string>
     <string name="team">我的团队</string>
+    <string name="stair">一级</string>
+    <string name="second_level">二级</string>
+    <string name="three_level">三级</string>
     <string name="earnings_details">收益明细</string>
     <string name="select_currency_hint">请选择币种</string>
     <string name="earnings">收益</string>
