--- a/baseproject/src/main/res/values/strings.xml
+++ b/baseproject/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="email_address">邮箱</string>
     <string name="login_account">账号</string>
     <string name="invitation_code">邀请码</string>
+    <string name="invitation_code_hint">*可填</string>
     <string name="send_vertify_code">获取验证码</string>
     <string name="forget_password">忘记密码</string>
     <string name="find_password">找回密码</string>
@@ -67,17 +68,19 @@
     <string name="username_input_hint">用户名不能低于2个中文或4个英文</string>
     <string name="username_toast_hint">@string/username_input_hint</string>
     <string name="username_toast_not_number_start_hint">用户名不能以数字开头</string>
-    <string name="username_toast_not_symbol_hint">用户名只能包含数字、字母和下划线</string>
+    <string name="username_toast_not_symbol_hint">用户名含有特殊字符</string>
     <string name="immediate_regist">注册</string>
     <string name="vertify_code_input_hint">输入4&#8211;6位验证码</string>
     <string name="phone_number_input_hint">输入11位手机号</string>
     <string name="email_address_input_hint">输入邮箱地址</string>
     <string name="login_account_hint">用户名/手机号/邮箱</string>
     <string name="input_invitation_code">输入邀请码</string>
+    <string name="input_invitation_code_v2">邀请码（非必填）</string>
     <string name="phone_number_toast_hint">请输入大陆地区合法手机号码</string>
     <string name="email_address_toast_hint">请输入正确的邮箱地址</string>
     <string name="login_account_toast_hint">请输入账号</string>
     <string name="password_input_hint">输入6位以上登录密码</string>
+    <string name="password_input_hint_v2">确认登录密码</string>
     <string name="password_toast_hint">密码长度不能低于6位</string>
     <string name="old_password_toast_hint">密码长度不能低于6位</string>
     <string name="new_password_toast_hint">密码长度不能低于6位</string>
