--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -991,6 +991,7 @@
     <string name="chat_delete_conversation_failed">删除聊天失败</string>
     <string name="chat_unconnected">正在尝试连接到聊天服务器</string>
     <string name="chat_my_friends">我的好友</string>
+    <string name="chat_disconnected">聊天服务器断开</string>
 
     <!--积分-->
     <string name="mine_integration">我的积分</string>
