--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="account_bind_wechat">绑定微信</string>
     <string name="account_bind_weibo">绑定微博</string>
     <string name="binding">确定绑定</string>
+    <string name="continue_binding">继续绑定</string>
     <string name="remove_binding">解除绑定</string>
     <string name="had_binding">已绑定</string>
     <string name="not_binding">未绑定</string>
@@ -993,7 +994,7 @@
     <string name="chat_my_friends">我的好友</string>
     <string name="chat_disconnected">聊天服务器断开</string>
 
-    <!--积分-->
+    <!--糖果-->
     <string name="mine_integration">我的糖果</string>
     <string name="recharge_integration">充值糖果</string>
     <string name="current_integration">当前糖果</string>
