1.增加首页模块，修复view因抢占焦点而自动滚动的问题 2.修改通讯录中手机联系人模块，不再进入首页立即实现，只有滑动到手机联系人，才去做请求

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1215,7 +1215,7 @@
     <string name="search_group_name">搜索群名称</string>
     <string name="no_result_group">该群不存在</string>
 
-    <string name="official_group">官方群聊</string>
+    <string name="official_group">企业群</string>
     <string name="search_chat_record">查找聊天记录</string>
 
     <string name="rank_market">排行</string>
