--- a/baseproject/src/main/res/values/strings.xml
+++ b/baseproject/src/main/res/values/strings.xml
@@ -178,6 +178,7 @@
     <string name="info_collect">收藏</string>
     <string name="info_hot">热门</string>
     <string name="info_recommend">推荐</string>
+    <string name="flash">7X24快讯</string>
     <string name="info_close">收起</string>
     <string name="publish_withpay_info">支付并发布文章</string>
     <string name="publish_info">发布文章</string>
