--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="buy_goods">购物</string>
     <string name="find_person">@string/find_someone</string>
     <string name="near_person">附近的人</string>
-    <string name="group">圈子</string>
+    <string name="group">社区</string>
     <string name="quiz">话题问答</string>
 
 
@@ -284,9 +284,9 @@
     <string name="channel_followed">已订阅</string>
     <string name="had_send_dynamic_to_channel">动态将在审核成功后发布</string>
 
-    <!--圈子-->
-    <string name="circle_master">圈主</string>
-    <string name="circle_master_manager">圈主和管理员</string>
+    <!--社区-->
+    <string name="circle_master">社主</string>
+    <string name="circle_master_manager">社主和管理员</string>
     <string name="circle_dealing">操作中</string>
     <string name="administrator">管理员</string>
     <string name="add_administrator">添加管理员</string>
@@ -298,33 +298,33 @@
     <string name="more_group">查看更多</string>
     <string name="recommend_group">热门推荐</string>
     <string name="exchange_group">换一批</string>
-    <string name="all_group">全部圈子</string>
+    <string name="all_group">全部社区</string>
     <string name="join_group">加入</string>
     <string name="quit_group">退出</string>
     <string name="group_joined">已加入</string>
-    <string name="group_mine">我的圈子</string>
+    <string name="group_mine">我的社区</string>
     <string name="my_invite">我的邀请</string>
     <string name="group_count">%d个兴趣小组，等待你的加入！</string>
-    <string name="circle">圈子</string>
+    <string name="circle">社区</string>
     <string name="circle_post">帖子</string>
     <string name="circle_member">成员</string>
     <string name="circle_post_default_title">详细描述你的问题，有助于收到准确的回答</string>
-    <string name="select_circle">选择圈子</string>
+    <string name="select_circle">选择社区</string>
     <string name="create">创建</string>
     <string name="create_reviewing">已经提交申请，请等待审核</string>
-    <string name="exit_circle">你是圈子创始人，不能进行退圈</string>
-    <string name="reviewing_circle">圈子还在审核中</string>
+    <string name="exit_circle">你是社区创始人，不能推出社区</string>
+    <string name="reviewing_circle">社区还在审核中</string>
     <string name="circle_detail_location">位置：	%s</string>
     <string name="circle_detail_usercount">成员：	%d</string>
     <string name="circle_detail_postcount">%d个帖子</string>
-    <string name="circle_manager_attorn">选择新圈主</string>
-    <string name="circle_manager_sure_attorn">确定将圈子 %1$s 转让给%2$s\n使其成为新的圈主？</string>
-    <string name="circle_manager_attorn_success">圈子转让成功</string>
-    <string name="circle_manager_attorn_failed">圈子转让失败</string>
-    <string name="circle_manager_format">圈管理(%d)</string>
+    <string name="circle_manager_attorn">选择新社区</string>
+    <string name="circle_manager_sure_attorn">确定将社区 %1$s 转让给%2$s\n使其成为新的社主？</string>
+    <string name="circle_manager_attorn_success">社区转让成功</string>
+    <string name="circle_manager_attorn_failed">社区转让失败</string>
+    <string name="circle_manager_format">社区管理(%d)</string>
     <string name="circle_member_format">成员(%d)</string>
     <string name="circle_post_from">来自	%s</string>
-    <string name="cirle_type">圈子分类</string>
+    <string name="cirle_type">社区分类</string>
     <string name="from">来自</string>
     <string name="circle_blacklist_format">黑名单(%d)</string>
     <string name="circle_blacklist">黑名单用户只能查看不能操作!</string>
@@ -338,7 +338,7 @@
     <string name="post_publishing">发贴中</string>
     <string name="post_editor_default_title">输入标题，20字以内</string>
     <string name="post_editor_default_content">输入要说的话，图文结合更精彩哦</string>
-    <string name="post_publish_select_circle">请选择一个圈子</string>
+    <string name="post_publish_select_circle">请选择一个社区</string>
     <string name="post_publish_select_title">标题还是要的!</string>
     <string name="post_publish_select_content">你的内容呢..</string>
 
@@ -357,7 +357,7 @@
     <string name="post_typpe_new">最新帖子</string>
     <string name="post_typpe_reply">最新回复</string>
 
-    <string name="create_circle">创建圈子</string>
+    <string name="create_circle">创建社区</string>
     <string name="edit_circle">详细信息</string>
     <string name="create_circle_notice">选填</string>
     <string name="create_circle_nolocation">不显示位置</string>
@@ -366,33 +366,33 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="change_circle_head_icon">更改圈子头像</string>
-    <string name="upload_circle_head_icon">上传圈子头像</string>
-    <string name="circle_head_icon">圈子头像</string>
-    <string name="circle_name">圈名</string>
-    <string name="circle_owner">圈主</string>
+    <string name="change_circle_head_icon">更改社区头像</string>
+    <string name="upload_circle_head_icon">上传社区头像</string>
+    <string name="circle_head_icon">社区头像</string>
+    <string name="circle_name">社区名</string>
+    <string name="circle_owner">社主</string>
     <string name="circle_manager">管理员</string>
     <string name="circle_type">分类</string>
     <string name="circle_chat">私聊</string>
-    <string name="edit_circle_name">输入圈名，20字以内</string>
-    <string name="edit_circle_type">选择圈子类别</string>
+    <string name="edit_circle_name">输入社区名，20字以内</string>
+    <string name="edit_circle_type">选择社区类别</string>
     <string name="edit_circle_select_tag">最多可选择5个标签</string>
-    <string name="edit_circle_location">设置圈子的地理位置</string>
+    <string name="edit_circle_location">设置社区的地理位置</string>
     <string name="circle_location">位置</string>
     <string name="edit_circle_synchronization">帖子同步至动态</string>
-    <string name="edit_circle_block">设置为封闭圈子</string>
-    <string name="edit_circle_charge">收费入圈</string>
-    <string name="edit_circle_free">免费入圈</string>
-    <string name="edit_circle_join">注：用户需经过圈管理员同意方可加入封闭圈子</string>
-    <string name="close_circle_rule">收费圈子不能改成公开或私有圈子</string>
+    <string name="edit_circle_block">设置为封闭社区</string>
+    <string name="edit_circle_charge">收费入社区</string>
+    <string name="edit_circle_free">免费入社区</string>
+    <string name="edit_circle_join">注：用户需经过社区管理员同意方可加入封闭社区</string>
+    <string name="close_circle_rule">收费社区不能改成公开或私有社区</string>
     <string name="edit_circle_notice">公告</string>
     <string name="edit_circle_notice_details">公告详情</string>
-    <string name="edit_circle_rule">点击创建即代表同意《%s圈子创建协议》</string>
-    <string name="circle_rule">圈子创建协议</string>
+    <string name="edit_circle_rule">点击创建即代表同意《%s社区创建协议》</string>
+    <string name="circle_rule">社区创建协议</string>
 
     <string name="circle_detail">详细信息</string>
     <string name="post_detail">帖子详情</string>
-    <string name="circle_earnings">圈子收益</string>
+    <string name="circle_earnings">社区收益</string>
     <string name="circle_earningn_member">成员费</string>
     <string name="circle_earningn_total">总收益(%s)</string>
     <string name="circle_earningn_top">置顶收益</string>
@@ -400,14 +400,14 @@
     <string name="circle_permission">发帖权限</string>
     <string name="circle_report">举报管理</string>
     <string name="circle_more">更多操作</string>
-    <string name="circle_exit">退出圈子</string>
-    <string name="circle_transfer">转让圈子</string>
-    <string name="cancel_manager">移出圈管理</string>
-    <string name="cancle_circle">移出圈子</string>
+    <string name="circle_exit">退出社区</string>
+    <string name="circle_transfer">转让社区</string>
+    <string name="cancel_manager">移出社区管理</string>
+    <string name="cancle_circle">移出社区</string>
     <string name="cancle_blacklist">移出黑名单</string>
-    <string name="appoint_manager">设为圈管理员</string>
+    <string name="appoint_manager">设为社区管理员</string>
     <string name="appoint_blacklist">加入黑名单</string>
-    <string name="appoint_circle">设为圈管理员</string>
+    <string name="appoint_circle">设为社区管理员</string>
     <string name="circle_report_more">[查看全部]</string>
     <string name="circle_report_reason">举报原因</string>
     <string name="circle_report_post">%1$s 举报 %2$s 的帖子：</string>
@@ -419,8 +419,8 @@
     <string name="circle_report_disagree">驳回</string>
     <string name="circle_post_permission">发帖权限设置</string>
     <string name="circle_permission_all">所有成员</string>
-    <string name="circle_permission_owner">仅圈主</string>
-    <string name="circle_permission_manager">仅圈主和管理员</string>
+    <string name="circle_permission_owner">仅社主</string>
+    <string name="circle_permission_manager">仅社主和管理员</string>
     <string-array name="circle_mine_type">
         <item>@string/joined_group</item>
         <item>待审核的</item>
@@ -501,14 +501,14 @@
     <string name="stick_type_group_commnet_message">对你的帖子进行了“%1$s”评论并申请置顶，请及时审核。</string>
     <string name="stick_type_group">帖子置顶</string>
     <string name="stick_type_group_message">对帖子“%1$s”申请置顶，请及时审核。</string>
-    <string name="stick_type_group_join">圈子加入申请</string>
-    <string name="stick_type_group_join_message">申请加入你创建的圈子“%1$s”，请及时审核。</string>
+    <string name="stick_type_group_join">社区加入申请</string>
+    <string name="stick_type_group_join_message">申请加入你创建的社区“%1$s”，请及时审核。</string>
 
     <!--代码中的string-->
     <string name="token_expiers">token过期，请重新登陆</string>
     <string name="share">分享</string>
     <string name="share_dynamic">分享动态</string>
-    <string name="share_circle">分享圈子</string>
+    <string name="share_circle">分享社区</string>
     <string name="share_post">分享帖子</string>
     <string name="favorite">收藏</string>
     <string name="get_dynamic_dig_list_failure">获取点赞列表失败</string>
@@ -692,7 +692,7 @@
 
     <string name="draft_type_questions">提问</string>
     <string name="draft_type_answers">回答</string>
-    <string name="draft_type_circle">圈子</string>
+    <string name="draft_type_circle">社区</string>
 
 
     <string name="qa_publish_select_topic_count_hint">添加话题不可以超过%d个</string>
@@ -962,11 +962,11 @@
     <string name="join_wait_audit">申请加入待审核</string>
     <string name="not_find_circle_post_to_publish">未找到相关帖子~</string>
     <string name="to_publish_circle_post">去发帖</string>
-    <string name="not_find_circle_to_publish">未找到相关圈子，创建属于自己的圈子吧</string>
-    <string name="to_publish_circle">创建圈子</string>
-    <string name="not_find_joined_circle">未找相关圈子，去加入感兴趣圈子吧</string>
-    <string name="join_circle">加入圈子</string>
-    <string name="circle_publish_hint_certification">认证用户才能创建圈子，去认证?</string>
+    <string name="not_find_circle_to_publish">未找到相关社区，创建属于自己的社区吧</string>
+    <string name="to_publish_circle">创建社区</string>
+    <string name="not_find_joined_circle">未找相关社区，去加入感兴趣社区吧</string>
+    <string name="join_circle">加入社区</string>
+    <string name="circle_publish_hint_certification">认证用户才能创建社区，去认证?</string>
 
     <!--举报-->
     <string name="report">举报</string>
@@ -982,9 +982,9 @@
     <string name="circle_join_reviewing">申请审核中</string>
     <string name="please_join_circle_first">需要先加入才可发帖</string>
     <string name="circle_member_added_blacklist">你被管理员加入到了黑名单。</string>
-    <string name="circle_member_comment_join">加入圈子后方可评论</string>
+    <string name="circle_member_comment_join">加入社区后方可评论</string>
     <string name="publish_circle_post_format">\&#034;%1$s\&#034;仅%2$s拥有发帖权限</string>
-    <string name="report_circle">举报圈子</string>
+    <string name="report_circle">举报社区</string>
     <string name="publish_post">发帖</string>
     <string name="syn_to_dynamic">同步至动态</string>
     <string name="handle_fail">操作失败！</string>
