apk版本code,我的团队时间字段更改，隐私设置

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,7 @@
     <string name="account_manager">账户管理</string>
     <string name="change_password">修改密码</string>
     <string name="password_manager">密码管理</string>
+    <string name="privacy_manager">隐私设置</string>
     <string name="password_pay">支付密码</string>
     <string name="set_password_pay">设置支付密码</string>
     <string name="change_password_pay">修改支付密码</string>
