1.新增群隐私界面；2.新增群审核通知等界面及接口对接；3.完善加群申请流程；4.跟服务器协商完善加好友的流程

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1247,6 +1247,7 @@
     <string name="chat_no_talking_silent">你已被禁言</string>
     <string name="chat_no_talking_had_destory">群组已解散</string>
 
+    <string name="chat_group_not_allow_anyone_enter">该群已禁止任何人加入！</string>
 
     <string name="only_number_or_letter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
 
