--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,6 +309,7 @@
     <string name="my_invite">我的邀请</string>
     <string name="group_count">%d个兴趣小组，等待你的加入！</string>
     <string name="circle">社区</string>
+    <string name="turn_into_community">进入</string>
     <string name="circle_post">帖子</string>
     <string name="circle_member">成员</string>
     <string name="circle_post_default_title">详细描述你的问题，有助于收到准确的回答</string>
