1、视频详情页 2、修改创建群聊，不选组织，创建群之后，进群查看组织，默认为九曲互动 3、修改创建群聊，选择组织，点击完成，进入群聊消息界面点击左上角向左箭头，返回页面为创建群聊，添加群成员页面 4、首页推荐咨询视频和普通咨询做判断

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1259,6 +1259,10 @@
     <string name="chat_no_talking_had_destory">群组已解散</string>
 
     <string name="chat_group_not_allow_anyone_enter">该群已禁止任何人加入！</string>
+    <string name="recommend_video">推荐视频</string>
+    <string name="video_details">视频详情</string>
+    <string name="all_comment">全部评论(%d)</string>
+    <string name="play_num">播放量%1$s</string>
 
     <string name="only_number_or_letter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
 
